--- a/vue-way.html
+++ b/vue-way.html
@@ -16,17 +16,28 @@
         var viewModel = {};
 
         /**
-         * Reactivity - 객체에 반응성을 부여
+         * Reactivity - 객체에 반응성을 부여한다.
          * Object.defineProperty - 객체의 특정 속성의 동작을 재정의 하는 API
          * Object.defineProperty(대상 객체, 대상 객체의 속성, {
          *      동작 정의
          * })
          * 
          * Reactivity 라이브러리화
-         * 즉시 실행 함수 활용 - 오픈 소스 라이브러리에서 활용하는 방법
+         * 즉시 실행 함수(IIFE, Immediately Invoked Function Expression) 활용 - 오픈 소스 라이브러리에서 주로 활용하는 방법
          * (function () {
          *      statements
          * })();
+         */
+        
+        /**
+         * viewModel (JavaScript plain object) 을 정의하고,
+         * Object.defineProperty API로 viewModel의 message 속성의 동작을 재정의해 객체에 반응성을 부여한다.
+         * 즉시 실행 함수로 객체에 반응성을 부여하는 코드를 라이브러리화 한다.
+         * 
+         * viewModel의 message 속성의 값이 변경될 때마다 div.innerHTML 값을 업데이트 한다.
+         * 이렇게 하면 viewModel의 message 속성이 업데이트 될 때마다 div 태그가 업데이트되어 화면을 새로고침하지 않아도 화면이 바뀐다.
+         * 
+         * 반응성와 반응성의 라이브러리화가 Vue.js의 핵심이다.
          */
         (function () {
             function init() {
