--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -13,8 +13,8 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
         /**
-         * 반응성와 반응성 라이브러리화가 모두 Vue 객체의 data 속성에 반영되어 있어, 
-         * data 속성이 변경되면 바로 화면이 업데이트 된다.
+         * 반응성과 반응성 라이브러리화가 모두 Vue 객체의 data 속성에 반영되어 있다.
+         * 따라서, data 속성이 변경되면 화면이 업데이트 된다.
          */
         new Vue({
             el: '#app',
